tests/sumo/errors/action_step_fractional_warning/errors.sumo
Warning: The parameter action-step-length must be a non-negative multiple of the simulation step-length. Parsing given value (1.2 s.) to the adjusted value 1 s.
Warning: The parameter action-step-length must be a non-negative multiple of the simulation step-length. Parsing given value (2.4 s.) to the adjusted value 2 s.
Warning: Given action step length 2 for vehicle type 'SUMO_DEFAULT_TYPE' is larger than its parameter tau (=1)! This may lead to collisions. (This warning is only issued once per vehicle type).
